<resources>
    <string name="app_name">P10InventoryApp</string>
    <string name="name">Name:</string>
    <string name="available">Available:</string>
    <string name="price">Price:</string>
    <string name="add_a_new_item">Add a New Item</string>
    <string name="order_more">ORDER MORE</string>
    <string name="nametitle">Name:</string>
    <string name="pricetitle">Price: </string>
    <string name="availabletitle">Available:</string>
    <string name="sale">Sale</string>
    <string name="inventory">INVENTORY</string>
    <string name="quantities_to_be_ordered">Quantities to be ordered</string>
    <string name="delete_permanently">Delete Permanently</string>
    <string name="namehint">Name</string>
    <string name="price_of_the_product">Price of the Product (in Rs.)</string>
    <string name="avaialable_quantities_of_the_product">Avaialable Quantities of the Product</string>
    <string name="submit">Submit</string>
</resources>
