<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/details_productName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:gravity="center"
        android:hint="Medium Text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="22sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/details_productImage"
            android:layout_width="100dp"
            android:layout_height="100dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/details_price_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2.25"
            android:text="@string/price"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/details_productPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:layout_weight="2.75"
            android:hint="price"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/details_available_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="20dp"
            android:layout_weight="2.5"
            android:text="@string/available"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/details_productQuantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2.5"
            android:hint="available"
            android:textSize="18sp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="0.1">
        <Button
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:id="@+id/qtyUpdatePlus"
            android:text="+"
            android:layout_alignParentRight="true"
            />
        <Button
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:id="@+id/qtyUpdateMinus"
            android:text="-"
            android:layout_toLeftOf="@+id/qtyUpdatePlus"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <TextView
            android:id="@+id/details_order_quantity_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/quantities_to_be_ordered"
            android:textSize="22sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/details_orderQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="13dp"
                android:text="0"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/details_buttonDecrement"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_gravity="right"
                android:layout_toLeftOf="@+id/details_orderQuantity"
                android:text="-" />

            <Button
                android:id="@+id/details_buttonIncrement"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_gravity="center_horizontal"
                android:layout_toRightOf="@+id/details_orderQuantity"
                android:text="+" />

        </RelativeLayout>

        <Button
            android:id="@+id/details_orderNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:text="@string/order_more" />

        <Button
            android:id="@+id/details_deleteNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:text="DELETE PERMANENTLY" />
    </LinearLayout>

</LinearLayout>
